; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_axp288_adc.c_axp288_adc_read_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_axp288_adc.c_axp288_adc_read_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regmap = type { i32 }

@EIO = common dso_local global i32 0, align 4
@IIO_VAL_INT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, %struct.regmap*)* @axp288_adc_read_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @axp288_adc_read_channel(i32* %0, i64 %1, %struct.regmap* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.regmap*, align 8
  %8 = alloca [2 x i32], align 4
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.regmap* %2, %struct.regmap** %7, align 8
  %9 = load %struct.regmap*, %struct.regmap** %7, align 8
  %10 = load i64, i64* %6, align 8
  %11 = getelementptr inbounds [2 x i32], [2 x i32]* %8, i64 0, i64 0
  %12 = call i64 @regmap_bulk_read(%struct.regmap* %9, i64 %10, i32* %11, i32 2)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* @EIO, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %28

17:                                               ; preds = %3
  %18 = getelementptr inbounds [2 x i32], [2 x i32]* %8, i64 0, i64 0
  %19 = load i32, i32* %18, align 4
  %20 = shl i32 %19, 4
  %21 = getelementptr inbounds [2 x i32], [2 x i32]* %8, i64 0, i64 1
  %22 = load i32, i32* %21, align 4
  %23 = ashr i32 %22, 4
  %24 = and i32 %23, 15
  %25 = add nsw i32 %20, %24
  %26 = load i32*, i32** %5, align 8
  store i32 %25, i32* %26, align 4
  %27 = load i32, i32* @IIO_VAL_INT, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %17, %14
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i64 @regmap_bulk_read(%struct.regmap*, i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
